tests/compile-fail/compile_fail__type_error__stackless__ternary_out.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:27:12
   │
27 │       I0 = I0 ? F0 : F1;  
   │            ^^^^^^^^^^^^ this expression not supported by format


